fix(header): 1st lvl element alignment

--- a/components/src/patterns/header/header.scss
+++ b/components/src/patterns/header/header.scss
@@ -85,6 +85,7 @@ html {
   height: var(--sdds-header-height);
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 .sdds-nav__overlay {
